Fixed the main map. Added all state links. links do no longer open a new tab. Spacing changed.

--- a/App/static/css/style.css
+++ b/App/static/css/style.css
@@ -211,7 +211,7 @@ body {
 }
 
 #wrapper {
-	padding-top: 80px;
+	padding-top: 60px;
 	font-family: 'Open Sans Condensed', sans-serif;
 	font-size: 45px;
 }
